# compilers-proj

./: .gitignore  CMakeLists.txt
proj1/: CMakeLists.txt  main.c  scanner.c  scanner.h  token.h
proj2/: CMakeLists.txt  _gen_proc_tables.py  _procedure.txt  array.c  array.h  main.c  parsing_table.h  symbol.h
proj2-ocaml/: dune  grammar.txt  lexer.mll  parsingtbl.ml  proj2.ml  token.ml
proj2-ocaml/grammar/: grammar.ml  lexer.mll  parsing.ml  token.ml
proj4/: _grammar.txt  _procedure.txt
proj4-ocaml/: dune  grammar.txt  grammar1.txt  lexer.ml  lexer.mll  opg.ml  parser.ml  proj4.ml  rpn.ml  token.ml
proj4-ocaml/grammar/: dune  grammar.ml  lexer.mll  token.ml
tests/: p1_code.txt  test_p1.py
